[package]
name = "PY32f071xx-pac"
description = "Peripheral Access Crate for Puya's PY32f071xx microcontroller"
documentation = "https://docs.rs/PY32f071xx-pac"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
cortex-m.workspace = true
vcell.workspace = true

[dependencies.cortex-m-rt]
optional = true
workspace = true

[features]
rt = ["cortex-m-rt/device"]
